# coding_practice

./: hello.go
2023_algo_ds/: linkedListSingly.js  maxBinaryHeaps.js  xx.js
2023_algo_ds/practise/: anagram.js  containsDuplicate.js
2023_algo_ds/solutions/: JavaScript Algorithms and Data Structures Masterclass _ Udemy.html
2024_dsa/theory/: bubble.py  bubble_sort.py  insertion_sort.py  insertion_sortx.py  merge.py  merge_sort.py  quick.py  quick_sort.py  radix.py  selection.py  selection_sort.py  selection_sortx.py
CLOUD/CloudNativeArchitecture/: ISSUES.md
CLOUD/SUSE/: commands.md  configs.md  demoo-configmap.yaml  demoo-deployment.yaml  demoo-namespace.yaml  demoo-service.yaml  deployment.yaml  imperative_to_dec.md  lesson3:exercise 2.md
CLOUD/kubernetes-the-hard-way/: admin-key.pem  (+37 more)
LeetCode/: package-lock.json  package.json  recursion.ts
algo_data_structures/: Cargo.toml
algorithms_data_structures/: addUpTo.js  addUpTo.ts  package.json  tsconfig.json
algorithms_practise/: algorithms.js  booWho.js  bouncer.js  chunkArrayInGroups.js  confirmEnding.js  factorialise.js  findElement.js  frankenSplice.js  getIndexToIns.js  longestWord.js  mutation.js  repeatStringNumTimes.js  reverseStr.js  titleCase.js  truncateString.js
d3-react-spring/: .dockerignore  Dockerfile-dev  docker-compose.yml  index.d.ts  ll  package.json
data_structures_algorithm_typescript/: LinkedList.ts  recursion.ts
docker-udemy/: aws-configuration.md  aws.md  commands.md  docker-composee.md  glossary  kubernetes.md  nginx.md
flaskapp_with_test_updated/: app.py  app_utils.py  readme.md  test.py
mikro-orm-fiddling/: .gitignore  commands  docker-compose.yml  edocker-compose copy.txt  initialdocker-compose_works  llker-cmpose copy  package-lock.json  package.json  tsconfig.json
my-react-custom-hooks/: package.json
rust/async-and-tokio/: Cargo.toml  kk.js
rust/async-and-tokio/src/: main.rs
rust/crates_stuff/add/adder/: Cargo.toml
rust/crates_stuff/add/adder/src/: main.rs
rust/crates_stuff/publishing/: Cargo.toml
rust/crates_stuff/publishing/src/: lib.rs
rust/tokio/: Cargo.toml  foo.txt
rust/tokio/examples/: async-red-write.rs  channels.rs  hello-redis.rs
rust/tokio/src/: main.rs  main1.rs
rust/webapp/: .env  Cargo.toml
rust/webapp/migrations/2021-01-06-120145_create_members/: up.sql
rust/webapp/src/: graphql_schema.rs  main.rs
seaweedfs/: log  pf14000.out  report.js  tikv-crd.yaml  tikv-crd2.yaml  topology.yaml
seaweedfs/tikv/surreal-tikv/seaweedfs-tikv/fluvio/: Cargo.toml  fl.ts  package.json  topic1.yaml
sol/anchor/node-operator/programs/node-operator/: Cargo.toml
sol/anchor/node-operator/programs/node-operator/src/: lib.rs  lockup.rs
system_desgin/: client-server-model.md
test-ledger/: faucet-keypair.json
testing/: package-lock.json  util.js
(+672 files in other folders)
