[package]
name = "async-and-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-redis = "0.4.1"
tokio = { version = "1.21.0", features = ["full"] } 
bytes = "1.2.1"
parking_lot = "0.12.1"


[dependencies.pyo3]
version = "0.17.1"
features = ["auto-initialize"]
