[package]
name = "webapp"
version = "0.1.0"
authors = ["Oyelowo Oyedayo <oyelowooyedayo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.15.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
