[package]
name = "crates_useless"
version = "0.1.0"
authors = ["Oyelowo Oyedayo <oyelowooyedayo@gmail.com>"]
edition = "2018"
description = "Learning about crates"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
