[package]
name = "adder"
version = "0.1.0"
authors = ["Oyelowo Oyedayo <oyelowooyedayo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
add-one = { path = "../add-one" }
doubler = { path = "../doubler" }
rand = "0.5.5"