[package]
name = "fluvio"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio = "0.13.1"
async-std = { version = "1.8.0", default-features = false, features = ["attributes"] }
futures-lite = "1.11.3"
chrono = "0.4"
